tests/compile-fail/cases/tainted_into_env.stderr
error[E0277]: the trait bound `Tainted<Vec<u8>>: AsRef<OsStr>` is not satisfied
 --> cases/tainted_into_env.rs:7:34
  |
7 |     unsafe { env::set_var("KEY", t); }
  |              ------------        ^ the trait `AsRef<OsStr>` is not implemented for `Tainted<Vec<u8>>`
  |              |
  |              required by a bound introduced by this call
  |
note: required by a bound in `set_var`
 --> $RUST/std/src/env.rs
